--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -30,6 +30,12 @@ svg {
       height: 5rem;
       width: 5rem;
     }
+
+    @include respond(phone) {
+      height: 3.5rem;
+      width: 3.5rem;
+      transform: translateX(1rem);
+    }
   }
 
   &--edit {
